@@ -7,6 +7,7 @@ Release 0.9
 2009-12-02:
 - Add object::instance_of, which works like Javascript's "instanceof" (#128).
 - Add object::constructor: it returns the object's constructor function (#172).
+- Make object::constructor/prototype/parent work on const objects (#175).
 
 2009-11-14:
 - Add object::set_properties and object::define_properties for setting or
